--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<span>药科大校花</span>
-<a href="https://p.ipic.vip/49hpkn.jpg">点击查看</a>
+<div class="home-main">
+  <div class="main-content">
+    <h1 style="font-size: 4em;">Leo Jiang</h1>
+    <p>嗨，这里是Leo，一名前端开发</p>
+    <P>👏🏻本网页主要记录技术文章以及好玩的网站，欢迎随时到访👏🏻</P>
+    <!-- <a href=""><img class="logo" src="../assets/suolong.jpg" width="100"></a> -->
+  </div>
+  <div class="food">
+    <div>技术博客</div>
+    <div>联系方式</div>
+    <div>低代码平台</div>
+    <div>待更新</div>
+  </div>
+</div>
 <router-outlet></router-outlet>
